--- a/package.json
+++ b/package.json
@@ -99,8 +99,7 @@
 		"vite-plugin-pwa": "^0.20.0",
 		"vite-plugin-svgr": "^4.2.0",
 		"ws": "^8.18.0",
-		"zod": "^3.23.8",
-		"typescript": "^5.5.4"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
@@ -115,6 +114,7 @@
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@types/uuid": "^9.0.8"
+		"@types/uuid": "^9.0.8",
+		"typescript": "^5.5.4"
 	}
 }
