--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^9.0.8",
+		"@types/ws": "^8.5.12",
 		"typescript": "^5.5.4"
 	}
 }
