--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-visually-hidden": "^1.1.0",
 		"@reactour/tour": "^3.7.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@tanstack/react-table": "^8.20.1",
@@ -51,6 +52,7 @@
 		"better-sqlite3": "^9.6.0",
 		"blockly": "^11.1.1",
 		"cors": "^2.8.5",
+		"dom-to-image-more": "^3.4.3",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.23.1",
 		"drizzle-orm": "^0.32.1",
@@ -113,7 +115,6 @@
 		"@types/node": "^20.14.14",
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^9.0.8",
 		"@types/ws": "^8.5.12",
 		"typescript": "^5.5.4"
