--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -10,12 +10,14 @@
 	},
 	"Client_Settings": {
 		"AutoReply": false,
-		"Reply_Time_ms": 5000
+		"Reply_Time_ms": 5000,
+		"Screenshot_Interval_min": 2
 	},
 	"Code_Execution_Limits": {
 		"Max_CodeRangeSizeMb": 50,
 		"Max_OldGenerationSizeMb": 50,
 		"Max_YoungGenerationSizeMb": 50,
-		"Max_Num_Message_Queue": 10
+		"Max_Num_Message_Queue": 10,
+		"Max_CPU_Usage": 20
 	}
 }
