--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
 		"drizzle:generate": "drizzle-kit generate --config=drizzle.config.ts",
 		"drizzle:push": "drizzle-kit push --config=drizzle.config.ts",
 		"drizzle:introspect": "drizzle-kit introspect --config=drizzle.config.ts",
-		"drizzle:studio": "drizzle-kit studio --config=drizzle.config.ts",
+		"drizzle:studio": "drizzle-kit studio --config=drizzle.studio.config.ts",
 		"reset-credential": "tsx src/server/db/users.ts --reset-credentials",
-		"reset-tutorials": "tsx src/server/db/tutorials.ts --reset-tutorials",
 		"format": "biome format . --write",
 		"lint": "biome check .",
 		"lint:fix": "pnpm lint --write",
@@ -26,14 +25,10 @@
 	"dependencies": {
 		"@hono/node-server": "^1.12.0",
 		"@hono/node-ws": "^1.0.4",
-		"@lexical/code": "^0.16.1",
-		"@lexical/markdown": "^0.16.1",
-		"@lexical/react": "^0.16.1",
-		"@lexical/rich-text": "^0.16.1",
-		"@lexical/selection": "^0.16.1",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@lucia-auth/adapter-postgresql": "^3.1.2",
 		"@lucia-auth/adapter-sqlite": "^3.0.2",
+		"@mdxeditor/editor": "^3.11.3",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
@@ -47,6 +42,7 @@
 		"@tanstack/react-table": "^8.20.1",
 		"@types/js-yaml": "^4.0.9",
 		"@vitejs/plugin-react": "^4.3.1",
+		"@xyflow/react": "^12.3.0",
 		"autoprefixer": "^10.4.20",
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
@@ -72,7 +68,6 @@
 		"kuromoji": "^0.1.2",
 		"kysely": "^0.27.4",
 		"level": "^8.0.1",
-		"lexical": "^0.16.1",
 		"lucia": "^3.2.0",
 		"lucide-react": "^0.381.0",
 		"nodemon": "^3.1.4",
@@ -84,6 +79,7 @@
 		"react-dom": "^18.3.1",
 		"react-i18next": "^14.1.3",
 		"react-markdown": "^9.0.1",
+		"react-remark": "^2.1.0",
 		"react-resizable-panels": "^2.0.22",
 		"react-router-dom": "^6.26.0",
 		"redis": "^4.7.0",
