--- a/.github/workflows/biome.yaml
+++ b/.github/workflows/biome.yaml
@@ -13,6 +13,6 @@ jobs:
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
-          version: latest
+          version: 1.8.3
       - name: Run Biome
         run: biome ci .
