--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"autoprefixer": "^10.4.20",
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
+		"biome": "^0.3.3",
 		"blockly": "^11.1.1",
 		"cors": "^2.8.5",
 		"dom-to-image-more": "^3.4.5",
