--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"pnpm": "^9.10.0",
 		"postcss": "^8.4.47",
 		"react": "^18.3.1",
+		"react-cookie": "^7.2.0",
 		"react-dom": "^18.3.1",
 		"react-i18next": "^14.1.3",
 		"react-markdown": "^9.0.1",
