--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,14 +39,14 @@ services:
         if [ ! -f /initialized/.initialized ]; then
           pnpm install &&
           pnpm run drizzle:generate &&
-          pnpm run drizzle:push &&
+          pnpm run drizzle:migrate &&
           pnpm run reset-credential &&
           touch /initialized/.initialized &&
           pnpm run dev 
         else
           pnpm install &&
           pnpm run drizzle:generate &&
-          pnpm run drizzle:push &&
+          pnpm run drizzle:migrate &&
           pnpm run dev;
         fi
       "
