--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^9.0.8",
 		"@types/ws": "^8.5.12",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"vitest": "^2.1.1"
 	}
 }
