--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"vite-express": "^0.17.0",
 		"vite-plugin-pwa": "^0.20.5",
 		"vite-plugin-svgr": "^4.2.0",
+		"vite-tsconfig-paths": "^5.0.1",
 		"ws": "^8.18.0",
 		"zod": "^3.23.8"
 	},
