--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
 		"@lucia-auth/adapter-postgresql": "^3.1.2",
 		"@lucia-auth/adapter-sqlite": "^3.0.2",
 		"@mdxeditor/editor": "^3.11.4",
+		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/auto-instrumentations-node": "^0.50.0",
+		"@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
+		"@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
+		"@opentelemetry/resources": "^1.26.0",
+		"@opentelemetry/sdk-metrics": "^1.26.0",
+		"@opentelemetry/sdk-node": "^0.53.0",
+		"@opentelemetry/sdk-trace-node": "^1.26.0",
+		"@opentelemetry/semantic-conventions": "^1.27.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
