--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@opentelemetry/auto-instrumentations-node": "^0.50.0",
 		"@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
 		"@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
+		"@opentelemetry/instrumentation-generic-pool": "^0.39.0",
 		"@opentelemetry/resources": "^1.26.0",
 		"@opentelemetry/sdk-metrics": "^1.26.0",
 		"@opentelemetry/sdk-node": "^0.53.0",
@@ -50,6 +51,7 @@
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-visually-hidden": "^1.1.0",
 		"@reactour/tour": "^3.7.0",
+		"@sentry/node": "^8.32.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-table": "^8.20.5",
 		"@types/js-yaml": "^4.0.9",
