--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -21,10 +21,16 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Get release date
+      id: vars
+      run: echo "RELEASE_TAG=$(date +'%Y-%d%m-%H%M')" >> $GITHUB_ENV
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile.prod
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/tutoriallm:latest-preview
+          ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview_${{ env.RELEASE_TAG }}
