--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -21,9 +21,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Get release date
+    - name: Get release tag
       id: vars
-      run: echo "RELEASE_TAG=$(date +'%Y-%d%m-%H%M')" >> $GITHUB_ENV
+      run: |
+        DATE_TAG=$(date +'%Y-%d%m')
+        echo "RELEASE_TAG=${DATE_TAG}-${{ github.run_number }}" >> $GITHUB_ENV
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
