--- a/package.json
+++ b/package.json
@@ -34,13 +34,19 @@
 		"@mdxeditor/editor": "^3.11.4",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/auto-instrumentations-node": "^0.50.0",
+		"@opentelemetry/auto-instrumentations-web": "^0.41.0",
+		"@opentelemetry/context-zone": "^1.26.0",
+		"@opentelemetry/core": "^1.26.0",
 		"@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
 		"@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
+		"@opentelemetry/instrumentation": "^0.53.0",
 		"@opentelemetry/instrumentation-generic-pool": "^0.39.0",
 		"@opentelemetry/resources": "^1.26.0",
 		"@opentelemetry/sdk-metrics": "^1.26.0",
 		"@opentelemetry/sdk-node": "^0.53.0",
+		"@opentelemetry/sdk-trace-base": "^1.26.0",
 		"@opentelemetry/sdk-trace-node": "^1.26.0",
+		"@opentelemetry/sdk-trace-web": "^1.26.0",
 		"@opentelemetry/semantic-conventions": "^1.27.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -52,6 +58,7 @@
 		"@radix-ui/react-visually-hidden": "^1.1.0",
 		"@reactour/tour": "^3.7.0",
 		"@sentry/node": "^8.32.0",
+		"@sentry/react": "^8.32.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-table": "^8.20.5",
 		"@types/js-yaml": "^4.0.9",
