⚡️ Support appCOnfig for Sentry on client

--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -2,8 +2,7 @@
 	"General_Settings": {
 		"Enable_Join_by_code": true,
 		"Enable_Create_Room": true,
-		"Enable_Memory_Use_Log": false,
-		"Sentry_DSN": ""
+		"Enable_Memory_Use_Log": false
 	},
 	"AI_Settings": {
 		"Chat_AI_Model": "gpt-4o",
@@ -20,5 +19,11 @@
 		"Max_YoungGenerationSizeMb": 50,
 		"Max_Num_Message_Queue": 10,
 		"Max_CPU_Usage": 20
+	},
+	"Client_Sentry_Settings": {
+		"Sentry_DSN": "",
+		"replaysOnErrorSampleRate": 0,
+		"replaysSessionSampleRate": 0,
+		"tracesSampleRate": 1
 	}
 }
