--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
 		"react": "^18.3.1",
 		"react-cookie": "^7.2.0",
 		"react-dom": "^18.3.1",
+		"react-ga4": "^2.1.0",
 		"react-i18next": "^14.1.3",
 		"react-markdown": "^9.0.1",
 		"react-remark": "^2.1.0",
