--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,12 @@ services:
       - .env
     command: >
       sh -c "
-        if [ ! -f /initialized/.initialized ]; then
+        if [ ! -f /app_data/.initialized ]; then
           pnpm install &&
           pnpm run drizzle:generate &&
           pnpm run drizzle:migrate &&
           pnpm run reset-credential &&
-          touch /initialized/.initialized &&
+          touch /app_data/.initialized &&
           pnpm run dev 
         else
           pnpm install &&
@@ -71,6 +71,6 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./app_data:/initialized
+      - ./app_data:/app_data
 volumes:
   db_data_db:
