--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,9 @@ services:
           ignore:
             - node_modules/
         - action: rebuild
-          path: package.json
+          path: ./
+          ignore:
+            - ./src
     depends_on:
       db:
         condition: service_healthy
