🔥 Uninstall unused packages and update biome setting

--- a/biome.json
+++ b/biome.json
@@ -4,6 +4,9 @@
 	"organizeImports": {
 		"enabled": false
 	},
+	"formatter": {
+		"enabled": true
+	},
 	"linter": {
 		"ignore": ["node_modules", "dist"],
 		"enabled": true,
