--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,7 +2,7 @@
 FROM node:20.14.0
 
 # 必要なパッケージをインストール
-RUN apt-get update && apt-get install -y iproute2 net-tools
+RUN apt-get update && apt-get install -y iproute2 net-tools ffmpeg
 
 
 # 作業ディレクトリを / に設定
