--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"@sentry/react": "^8.34.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-table": "^8.20.5",
+		"@types/fluent-ffmpeg": "^2.1.26",
 		"@types/js-yaml": "^4.0.9",
 		"@vitejs/plugin-react": "^4.3.2",
 		"@xyflow/react": "^12.3.2",
@@ -79,6 +80,7 @@
 		"express-http-proxy": "^2.1.1",
 		"express-rate-limit": "^7.4.1",
 		"fast-glob": "^3.3.2",
+		"fluent-ffmpeg": "^2.1.3",
 		"get-port": "^7.1.0",
 		"hono": "^4.6.5",
 		"html2canvas": "^1.4.1",
@@ -126,6 +128,7 @@
 		"vite-plugin-pwa": "^0.20.5",
 		"vite-plugin-svgr": "^4.2.0",
 		"vite-tsconfig-paths": "^5.0.1",
+		"wavesurfer.js": "^7.8.7",
 		"ws": "^8.18.0",
 		"zod": "^3.23.8"
 	},
