--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -6,7 +6,7 @@
 	},
 	"AI_Settings": {
 		"Chat_AI_Model": "gpt-4o",
-		"Chat_Audio:": true,
+		"Chat_Audio": true,
 		"Chat_AI_Temperature": 0.5
 	},
 	"Client_Settings": {
