--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@blockly/field-grid-dropdown": "^5.0.9",
+		"@blockly/field-slider": "^7.0.9",
 		"@hono/node-server": "^1.13.2",
 		"@hono/node-ws": "^1.0.4",
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
