--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -37,7 +37,7 @@ jobs:
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:latest-preview
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview_${{ env.RELEASE_TAG }}
     - name: Create GitHub Release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -45,3 +45,6 @@ jobs:
         release_name: Preview Release ${{ env.RELEASE_TAG }}
         draft: false
         prerelease: false
+        body: |
+          Changes in this release:
+          ${{ github.event.head_commit.message }}
