🚧 Implementing changeset and stop github Release action temporary

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,17 +39,17 @@ jobs:
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:latest
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:release_${{ env.RELEASE_TAG }}
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: release_${{ env.RELEASE_TAG }}
-        release_name: Release ${{ env.RELEASE_TAG }}
-        draft: false
-        prerelease: false
-        body: |
-          Changes in this release:
-          ${{ github.event.head_commit.message }}
+    # - name: Create GitHub Release
+    #   uses: softprops/action-gh-release@v2
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: release_${{ env.RELEASE_TAG }}
+    #     release_name: Release ${{ env.RELEASE_TAG }}
+    #     draft: false
+    #     prerelease: false
+    #     body: |
+    #       Changes in this release:
+    #       ${{ github.event.head_commit.message }}
 
-          The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:release_${{ env.RELEASE_TAG }}
+    #       The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:release_${{ env.RELEASE_TAG }}
