--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -38,17 +38,17 @@ jobs:
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:latest-preview
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview_${{ env.RELEASE_TAG }}
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: preview_${{ env.RELEASE_TAG }}
-        release_name: Preview Release ${{ env.RELEASE_TAG }}
-        draft: false
-        prerelease: true
-        body: |
-          Changes in this preview release:
-          ${{ github.event.head_commit.message }}
+    # - name: Create GitHub Release
+    #   uses: softprops/action-gh-release@v2
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: preview_${{ env.RELEASE_TAG }}
+    #     release_name: Preview Release ${{ env.RELEASE_TAG }}
+    #     draft: false
+    #     prerelease: true
+    #     body: |
+    #       Changes in this preview release:
+    #       ${{ github.event.head_commit.message }}
 
-          The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview_${{ env.RELEASE_TAG }}
+    #       The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:preview_${{ env.RELEASE_TAG }}
