✨ Update release job permissions to specify access levels for contents, pull requests, and issues

--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -56,7 +56,11 @@ jobs:
   release:
     name: Release Preview
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
