--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
 
 
     steps:
@@ -55,6 +56,7 @@ jobs:
   release:
     name: Release Preview
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
       - name: Checkout Repo
