--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,11 +23,19 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Get release tag
-      id: vars
+    - name: Get package version
+      id: pkg
       run: |
-        DATE_TAG=$(date +'%Y-%d%m')
-        echo "RELEASE_TAG=${DATE_TAG}-${{ github.run_number }}" >> $GITHUB_ENV
+        VERSION=$(jq -r '.version' package.json)
+        echo "PACKAGE_VERSION=${VERSION}" >> $GITHUB_ENV
+
+    - name: Check if version already exists
+      id: version_check
+      run: |
+        if git rev-parse "v${{ env.PACKAGE_VERSION }}" >/dev/null 2>&1; then
+          echo "Version ${{ env.PACKAGE_VERSION }} already exists."
+          exit 1
+        fi
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
@@ -37,19 +45,19 @@ jobs:
         push: true
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm:latest
-          ${{ secrets.DOCKER_USERNAME }}/tutoriallm:release_${{ env.RELEASE_TAG }}
+          ${{ secrets.DOCKER_USERNAME }}/tutoriallm:${{ env.PACKAGE_VERSION }}
 
-    # - name: Create GitHub Release
-    #   uses: softprops/action-gh-release@v2
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: release_${{ env.RELEASE_TAG }}
-    #     release_name: Release ${{ env.RELEASE_TAG }}
-    #     draft: false
-    #     prerelease: false
-    #     body: |
-    #       Changes in this release:
-    #       ${{ github.event.head_commit.message }}
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ env.PACKAGE_VERSION }}
+        release_name: Release ${{ env.PACKAGE_VERSION }}
+        draft: false
+        prerelease: false
+        body: |
+          Changes in this release:
+          ${{ github.event.head_commit.message }}
 
-    #       The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:release_${{ env.RELEASE_TAG }}
+          The release is also available on Docker Hub as ${{ secrets.DOCKER_USERNAME }}/tutoriallm:${{ env.PACKAGE_VERSION }}
