--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -79,6 +79,7 @@
 		"react-router-dom": "^6.27.0",
 		"react-tag-input": "^6.10.3",
 		"rehype-raw": "^7.0.0",
+		"rfc6902": "^5.1.1",
 		"socket.io-client": "^4.8.0",
 		"tailwindcss": "^3.4.14",
 		"tsx": "^4.19.1",
