🎨 Rewrite import ailias with script
Co-authored-by: Yuta Kobayashi <hi@yutakobayashi.dev>

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,8 +7,9 @@
 		"skipLibCheck": true,
 		"types": ["node"],
 		"jsx": "react-jsx",
+		"baseUrl": ".",
 		"paths": {
-			"@/": ["./src/"]
+			"@/*": ["./src/*"]
 		},
 		"jsxImportSource": "hono/jsx"
 	}
