🚧 Setting up frontend dev serer / docker for monorepo

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,7 +25,6 @@
 		"drizzle:studio": "drizzle-kit studio --config=drizzle.studio.config.ts",
 		"reset-credential": "tsx src/server/db/users.ts --reset-credentials",
 		"tsc": "tsc",
-		"prepare": "pnpm simple-git-hooks",
 		"cli": "tsx src/server/cli.ts"
 	},
 	"dependencies": {
@@ -83,8 +82,6 @@
 		"tiny-worker": "^2.3.0",
 		"tsx": "^4.19.1",
 		"uuid": "^9.0.1",
-		"vectra": "^0.7.6",
-		"vite": "^5.4.9",
 		"ws": "^8.18.0",
 		"zod": "^3.23.8",
 		"zod-to-json-schema": "^3.23.5"
@@ -100,5 +97,6 @@
 		"@types/pg": "^8.11.10",
 		"@types/uuid": "^9.0.8",
 		"typescript": "^5.6.3"
-	}
+	},
+	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
