--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"start": "NODE_ENV=production tsx src/main.ts",
+		"start": "NODE_ENV=production vite preview",
 		"build": "vite build",
 		"tsc": "tsc"
 	},
@@ -97,5 +97,6 @@
 		"@types/react-dom": "^18.3.1",
 		"@types/uuid": "^9.0.8",
 		"typescript": "^5.6.3"
-	}
+	},
+	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
