--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"i18n-ally.localesPaths": ["src/i18n"],
+	"i18n-ally.localesPaths": ["apps/frontend/src/i18n"],
 	"i18n-ally.keystyle": "nested",
 
 	"editor.formatOnSave": true,
