--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -55,6 +55,7 @@
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.23.2",
 		"drizzle-orm": "^0.32.2",
+		"extensions": "workspace:^",
 		"fast-glob": "^3.3.2",
 		"html2canvas": "^1.4.1",
 		"i18next": "^23.16.0",
