--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,7 +2,13 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
-		"moduleResolution": "Bundler",
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
+
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
+
 		"strict": true,
 		"skipLibCheck": true,
 		"types": ["node"],
