--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -11,7 +11,7 @@
 		"@blockly/field-slider": "^7.0.9",
 		"blockly": "^11.1.1",
 		"hono": "^4.6.5",
-		"uuid": "^9.0.1"
+		"uuidv7": "^1.0.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.16.12",
