--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"version": "1.0.0",
 	"exports": {
-		".": "./src/index.js"
+		".": "./dist/index.js"
 	},
 	"dependencies": {
 		"@blockly/field-grid-dropdown": "^5.0.9",
@@ -15,6 +15,9 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.16.12",
-		"@types/uuid": "^9.0.8"
+		"typescript": "^5.6.3"
+	},
+	"scripts": {
+		"build": "tsc -p tsconfig.build.json"
 	}
 }
