🔧 Update tsconfig.json to modify moduleResolution and comment out unnecessary options

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,9 +2,9 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"noEmit": true,
+		"moduleResolution": "Bundler",
+		// "allowImportingTsExtensions": true,
+		// "noEmit": true,
 
 		"esModuleInterop": false,
 		"allowSyntheticDefaultImports": true,
