--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 
 	"organizeImports": {
-		"enabled": false
+		"enabled": true
 	},
 	"formatter": {
 		"enabled": true
