--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "vitest run",
 		"prepare": "pnpm simple-git-hooks",
 		"format": "biome format . --write",
+		"check": "biome check . --fix",
 		"lint:repo": "sherif"
 	},
 	"pre-commit": "",
