🔧 Add 'noUnusedImports' rule to biome.json for improved import management

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
 		"rules": {
 			"recommended": true,
 			"correctness": {
-				"useExhaustiveDependencies": "info"
+				"useExhaustiveDependencies": "info",
+				"noUnusedImports": "warn"
 			},
 			"suspicious": {
 				"noExplicitAny": "warn",
