--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -53,7 +53,7 @@
 		"@opentelemetry/sdk-trace-web": "^1.26.0",
 		"@opentelemetry/semantic-conventions": "^1.27.0",
 		"@sentry/node": "^8.34.0",
-		"bcrypt": "^5.1.1",
+		"argon2": "^0.41.1",
 		"blockly": "^11.1.1",
 		"commander": "^12.1.0",
 		"cors": "^2.8.5",
@@ -86,7 +86,6 @@
 		"zod-to-json-schema": "^3.23.5"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.17",
 		"@types/fluent-ffmpeg": "^2.1.26",
 		"@types/http-proxy": "^1.17.15",
