--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,8 +42,11 @@
 		"@sentry/react": "^8.34.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.61.0",
+		"@tanstack/react-query-devtools": "^5.62.7",
+		"@tanstack/react-router": "^1.90.0",
 		"@tanstack/react-table": "^8.20.5",
 		"@tanstack/react-virtual": "^3.10.8",
+		"@tanstack/router-vite-plugin": "^1.87.13",
 		"@vitejs/plugin-react": "^4.3.2",
 		"@xyflow/react": "^12.3.2",
 		"autoprefixer": "^10.4.20",
@@ -77,7 +80,6 @@
 		"react-markdown": "^9.0.1",
 		"react-remark": "^2.1.0",
 		"react-resizable-panels": "^2.1.4",
-		"react-router-dom": "^6.27.0",
 		"react-tag-input": "^6.10.3",
 		"rehype-raw": "^7.0.0",
 		"rfc6902": "^5.1.1",
@@ -92,6 +94,8 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@tanstack/router-devtools": "^1.90.0",
+		"@tanstack/router-plugin": "^1.87.13",
 		"@types/kuromoji": "^0.1.3",
 		"@types/node": "^20.16.12",
 		"@types/react": "^18.3.11",
