--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"start": "NODE_ENV=production vite preview",
-		"build": "vite build",
+		"build": "pnpm tsc && vite build",
 		"tsc": "tsc"
 	},
 	"dependencies": {
@@ -89,7 +89,6 @@
 		"socket.io-client": "^4.8.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss": "^3.4.14",
-		"ts-morph": "^24.0.0",
 		"tsx": "^4.19.1",
 		"vite": "^5.4.9",
 		"vite-plugin-pwa": "^0.20.5",
