--- a/biome.json
+++ b/biome.json
@@ -1,28 +1,69 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 
-	"organizeImports": {
-		"enabled": true
-	},
-	"formatter": {
-		"enabled": true
-	},
-	"linter": {
-		"ignore": ["node_modules", "dist"],
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"correctness": {
-				"useExhaustiveDependencies": "info",
-				"noUnusedImports": "warn"
-			},
-			"suspicious": {
-				"noExplicitAny": "warn",
-				"noArrayIndexKey": "info"
-			}
-		}
-	},
-	"files": {
-		"ignore": ["node_modules", "dist"]
-	}
+  "organizeImports": {
+    "enabled": false
+  },
+  "formatter": {
+    "enabled": true,
+    "formatWithErrors": false,
+    "ignore": ["node_modules", "dist"]
+  },
+  "linter": {
+    "ignore": ["node_modules", "dist"],
+    "enabled": true,
+    "rules": {
+      "all": true,
+      "style": {
+        "useBlockStatements": "off",
+        "noDefaultExport": "off",
+        "useNamingConvention": "off",
+        "noNamespaceImport": "off",
+        "useDefaultSwitchClause": "off"
+      },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": {
+          "level": "warn",
+          "options": {
+            "maxAllowedComplexity": 30
+          }
+        }
+      },
+      "performance": { "noReExportAll": "off", "noBarrelFile": "off" },
+      "nursery": { "useImportRestrictions": "off" },
+
+      "correctness": {
+        "noUndeclaredVariables": "off",
+        "noNodejsModules": "off",
+        "useExhaustiveDependencies": "info",
+        "noUndeclaredDependencies": "off",
+        "useImportExtensions": "off",
+        "noUnusedImports": "warn"
+      },
+      "suspicious": {
+        "noExplicitAny": "warn",
+        "noArrayIndexKey": "info",
+        "noReactSpecificProps": "off",
+        "noConsole": {
+          "level": "warn",
+          "options": { "allow": ["assert", "error", "info", "warn", "table"] }
+        }
+      }
+    }
+  },
+  "json": {
+    "parser": {
+      "allowComments": true
+    },
+    "formatter": {
+      "enabled": true,
+      "indentStyle": "space",
+      "indentWidth": 2,
+      "lineWidth": 100
+    }
+  },
+
+  "files": {
+    "ignore": ["node_modules", "dist", "routeTree.gen.ts"]
+  }
 }
