🎨 🔧 Refactor environment variable usage and improve lazy loading for development tools

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "NODE_ENV=production vite preview",
+    "start": "vite preview",
     "build": "pnpm tsc && vite build",
     "tsc": "tsc --noEmit"
   },
