--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,16 +37,16 @@ jobs:
           exit 1
         fi
 
-    - name: Build and push Docker image(Frontend)
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        target: frontend
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_frontend:latest
-          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_frontend:${{ env.PACKAGE_VERSION }}
+    # - name: Build and push Docker image(Frontend)
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: .
+    #     file: ./Dockerfile
+    #     target: frontend
+    #     push: true
+    #     tags: |
+    #       ${{ secrets.DOCKER_USERNAME }}/tutoriallm_frontend:latest
+    #       ${{ secrets.DOCKER_USERNAME }}/tutoriallm_frontend:${{ env.PACKAGE_VERSION }}
 
     - name: Build and push Docker image(Backend)
       uses: docker/build-push-action@v2
@@ -56,8 +56,8 @@ jobs:
         target: backend
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_backend:latest
-          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_backend:${{ env.PACKAGE_VERSION }}
+          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_api:latest
+          ${{ secrets.DOCKER_USERNAME }}/tutoriallm_api:${{ env.PACKAGE_VERSION }}
       
 
     - name: Create GitHub Release
