--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "start": "vite preview",
     "build": "pnpm tsc && vite build",
-    "build:all": "cd ../backend && pnpm build && cd ../frontend && pnpm tsc && vite build",
+    "build:all": "pnpm --with-deps run build",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
