🔧 Update start script for production environment and fix environment variable reference in router

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite preview",
+    "start": "cross-env NODE_ENV=production vite preview",
     "build": "pnpm tsc && vite build",
     "tsc": "tsc --noEmit"
   },
