--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -58,6 +58,7 @@
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "deepl": "^1.0.13",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.23.2",
     "drizzle-orm": "^0.32.2",
@@ -80,6 +81,7 @@
     "rfc6902": "^5.1.1",
     "socket.io": "^4.8.0",
     "tiny-worker": "^2.3.0",
+    "ts-morph": "^24.0.0",
     "tsx": "^4.19.1",
     "uuid": "^9.0.1",
     "zod": "^3.23.8",
