🐛 🔧 Update Dockerfile to exclude frontend during build process

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,7 +9,7 @@ FROM base AS build
 COPY . /usr/src/tutoriallm
 WORKDIR /usr/src/tutoriallm
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile -r
-RUN pnpm run -r build 
+RUN pnpm run -r --filter=!frontend build
 
 FROM base AS backend-dev
 COPY --from=build /usr/src/tutoriallm /usr/src/tutoriallm
