--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "private": true,
-  "version": "1.0.2",
+  "version": "2.0.0",
   "type": "module",
   "exports": {
     "./hc": {
@@ -84,6 +84,7 @@
     "tiny-worker": "^2.3.0",
     "tsx": "^4.19.1",
     "uuid": "^9.0.1",
+    "uuidv7": "^1.0.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.5"
   },
