--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "1.0.2",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -90,6 +90,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
+    "uuidv7": "^1.0.2",
     "vite": "^5.4.9",
     "vite-plugin-pwa": "^0.20.5",
     "vite-plugin-svgr": "^4.2.0",
