--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -76,6 +76,7 @@
     "js-yaml": "^4.1.0",
     "kuromoji": "^0.1.2",
     "lucia": "^3.2.1",
+    "nanoid": "^5.0.9",
     "openai": "^4.77.0",
     "pg": "^8.13.0",
     "rehype-raw": "^7.0.0",
@@ -84,7 +85,6 @@
     "tiny-worker": "^2.3.0",
     "tsx": "^4.19.1",
     "uuid": "^9.0.1",
-    "uuidv7": "^1.0.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.5"
   },
