--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -10,7 +10,7 @@
     "@blockly/field-grid-dropdown": "^5.0.9",
     "@blockly/field-slider": "^7.0.9",
     "blockly": "^11.1.1",
-    "hono": "^4.6.5",
+    "hono": "catalog:",
     "uuidv7": "^1.0.2"
   },
   "devDependencies": {
