--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@blockly/field-grid-dropdown": "^5.0.9",
     "@blockly/field-slider": "^7.0.9",
+    "@hookform/resolvers": "^3.9.1",
     "@mdxeditor/editor": "^3.14.0",
-
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -64,6 +65,7 @@
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^14.1.3",
     "react-markdown": "^9.0.1",
     "react-remark": "^2.1.0",
