--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tutoriallm",
   "version": "2.0.0",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@9.6.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -20,5 +21,8 @@
     "sherif": "^1.0.2",
     "simple-git-hooks": "^2.11.1",
     "vitest": "^2.1.3"
+  },
+  "dependencies": {
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
