🚧 🎨 💄 Building new design system with tailwind/shadcn

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -45,6 +45,7 @@
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dom-to-image-more": "^3.5.0",
@@ -78,6 +79,7 @@
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
     "vite": "^5.4.9",
     "vite-plugin-pwa": "^0.20.5",
