--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -86,7 +86,7 @@
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^5.0.1",
     "wavesurfer.js": "^7.8.7",
-    "zod": "^3.23.8"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.90.0",
