--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@blockly/field-grid-dropdown": "^5.0.9",
     "@blockly/field-slider": "^7.0.9",
-    "blockly": "^11.1.1",
+    "blockly": "catalog:",
     "hono": "catalog:",
     "uuidv7": "^1.0.2"
   },
