--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -59,8 +59,8 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "catalog:",
-    "drizzle-kit": "catalog:",
-    "drizzle-orm": "catalog:",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.2",
     "drizzle-zod": "^0.6.0",
     "extensions": "workspace:^",
     "fast-glob": "^3.3.2",
