--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.10.1",
     "@blockly/field-grid-dropdown": "^5.0.9",
     "@blockly/field-slider": "^7.0.9",
     "@hookform/resolvers": "^3.9.1",
@@ -87,6 +88,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@tanstack/router-devtools": "^1.90.0",
     "@tanstack/router-plugin": "^1.87.13",
     "@types/kuromoji": "^0.1.3",
@@ -94,6 +96,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
+    "axe-html-reporter": "^2.2.11",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "catalog:"
   },
