--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@biomejs/biome": "1.9.4",
     "sherif": "^1.1.1",
     "simple-git-hooks": "^2.11.1",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.8"
   }
 }
